# winemon

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix  main.cpp  module.nix  overlay.nix  package.nix
.github/workflows/: ci.yml
src/: main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  winemanager.cpp  winemanager.h  winemonitor.cpp  winemonitor.h  winemonitor_linux.cpp  winemonitor_linux.h  wineserverlist.cpp  wineserverlist.h
